[gd_scene load_steps=3 format=2]

[ext_resource path="res://UsersGuide/UsersGuide.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.00784314, 0.227451, 0.423529, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.14902, 0.427451, 0.866667, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="UsersGuide" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="DialogBox" type="Panel" parent="."]
margin_left = 520.0
margin_top = 600.0
margin_right = 1320.0
margin_bottom = 700.0
custom_styles/panel = SubResource( 1 )

[node name="TextBox" type="RichTextLabel" parent="DialogBox"]
margin_left = 20.0
margin_top = 20.9025
margin_right = 780.0
margin_bottom = 80.9025
rect_pivot_offset = Vector2( -470, -380.902 )
bbcode_enabled = true
visible_characters = 0

[node name="Timer" type="Timer" parent="DialogBox"]
wait_time = 0.04
autostart = true

[node name="Skip" type="Button" parent="DialogBox"]
modulate = Color( 0.286275, 0.560784, 0.992157, 1 )
margin_left = 660.0
margin_top = 70.0
margin_right = 704.0
margin_bottom = 90.0
text = "Pular"

[node name="Close" type="Button" parent="DialogBox"]
modulate = Color( 0.286275, 0.560784, 0.992157, 1 )
margin_left = 720.0
margin_top = 70.0
margin_right = 774.0
margin_bottom = 90.0
text = "Fechar"
[connection signal="timeout" from="DialogBox/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="DialogBox/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="DialogBox/Close" to="." method="_on_Close_pressed"]
